# hybrid-rag-solution

./: .env.example  LICENSE  README.md  docker-compose.yml
.agents/skills/backend-development/: SKILL.md
hybrid-rag-backend/: .env  Dockerfile  pyproject.toml
hybrid-rag-backend/app/: main.py
hybrid-rag-backend/app/core/: config.py  database.py
hybrid-rag-backend/app/models/: __init__.py  schemas.py
hybrid-rag-backend/app/routers/: __init__.py  documents.py  index.py  query.py  visualization.py
hybrid-rag-backend/app/services/: __init__.py  document_service.py  graphrag_service.py  query_router.py  raptor_service.py  retrieval_service.py
hybrid-rag-frontend/: .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
hybrid-rag-frontend/src/: App.tsx
hybrid-rag-frontend/src/components/: DocumentsPanel.tsx  GraphVisualization.tsx  IndexPanel.tsx  QueryPanel.tsx  RaptorVisualization.tsx  StatusBar.tsx
hybrid-rag-frontend/src/components/ui/: resizable.tsx
hybrid-rag-frontend/src/lib/: api.ts
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml
