[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = {extras = ["standard"], version = "^0.128.0"}
psycopg = {extras = ["binary"], version = "^3.3.2"}
langchain = "^1.2.1"
langchain-openai = "^1.1.6"
langchain-community = "^0.4.1"
langgraph = "^1.0.5"
langsmith = "^0.6.1"
python-dotenv = "^1.2.1"
chromadb = "^1.4.0"
networkx = "^3.6.1"
python-multipart = "^0.0.21"
pydantic-settings = "^2.12.0"
scikit-learn = "^1.8.0"
langchain-text-splitters = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
